[package]
name = "sillybus"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
pdf-extract = "*"
lopdf = "*"
chrono = { version = "^0.4", optional = true, features = [
    "std",
    "clock",
], default-features = false }
encoding_rs = "0.8.32"
flate2 = "^1.0"
image = { version = "^0.24", optional = true }
itoa = "^1.0"
linked-hash-map = "^0.5"
log = "^0.4"
md-5 = "0.10"
nom = { version = "^7.1", optional = true }
pom = { version = "^3.2", optional = true }
rayon = { version = "^1.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
time = { version = "^0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["fs", "io-util"], optional = true }
weezl = "0.1"
indexmap = "2.2.3"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.0"

[dev-dependencies]
tempfile = "3.3"
env_logger = "0.10"

[features]
chrono_time = ["chrono"]
default = ["chrono_time", "nom_parser", "rayon"]
embed_image = ["image"]
nom_parser = ["nom"]
pom_parser = ["pom"]
# serde = ["dep:serde"]
async = ["tokio/rt-multi-thread", "tokio/macros"]

# [[example]]
# name = "extract_text"
# required-features = ["serde"]
